--- a/webpizza/applipizza/templates/applipizza/ingredients.html
+++ b/webpizza/applipizza/templates/applipizza/ingredients.html
@@ -1,15 +1,15 @@
 {% extends 'applipizza/base.html' %}
 
 {% block title %}
-les pizzas
+les ingredients
 {% endblock %}
 
 
 {% block content %}
-<h2>Voici nos {{pizzas|length}} Pizzas </h2>
+<h2>Voici nos {{ingredients|length}} Ingredients </h2>
 <ul>
-    {% for p in pizzas %}
-    <li>{{p}}</li>
+    {% for i in ingredients %}
+    <li>{{i}}</li>
     {% endfor %}
 </ul>
 {% endblock %}
