--- a/webpizza/applipizza/static/applipizza/css/styles.css
+++ b/webpizza/applipizza/static/applipizza/css/styles.css
@@ -1,102 +1,154 @@
-:root{
-    --primary-red: #B61500;
-    --primary-yellow: #ffac0e;
-    --primary-orange: #dc6b29;
-    --seconday : #f3c681;
+:root {
+    --primary-red    : #B61500;
+    --primary-yellow : #ffac0e;
+    --primary-orange : #dc6b29;
+    --seconday       : #f3c681;
+    --white          : #fff;
 }
 
 html {
-    font-family : Poppins;
+    font-family : Poppins, serif;
+    width       : 100%;
+    height      : 100%;
 }
 
-header {
-    display         : flex;
-    justify-content : center;
+html::after {
+    content   : "Appli Pizza";
+    font-size : 1.5rem;
+    display   : block;
+    position  : absolute;
+    bottom    : 1em;
+    right     : 1em;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    margin                : 0;
+    padding               : 0;
+    display               : grid;
+    grid-template-columns : 20em 1fr;
+    grid-template-rows    : 5em 1fr;
+    grid-template-areas   :
+        "header header"
+        "content content";
 }
 
-body #container-title {
-    overflow: hidden;
-    direction: rtl;
-    background-color: var(--primary-red);
-    height: 5em;
-    margin: 0;
+header {
+    width            : 20em;
+    height           : 100vh;
+    background-color : var(--primary-red);
+    padding          : 2rem 0;
+    box-sizing       : border-box;
+}
+
+header #logo {
+    width           : 100%;
     display         : flex;
+    align-items     : center;
     justify-content : center;
-    align-items   : center;
-    width: 100%;
 }
 
-body #container-title #content {
-    display: inline-block;
-    white-space: nowrap;
-    animation: marquee 5s linear infinite;
+header #logo img {
+    width     : 10em;
+    height    : 10em;
+    animation : bound 1s ease-in-out infinite;
 }
 
-@keyframes marquee {
-    from { transform: translateX(100%); }
-    to { transform: translateX(-100%); }
-}
+@keyframes bound {
+    0% {
+        transform : scale(1);
+    }
 
-body #container-title #content h1 {
-    display         : flex;
-    justify-content : center;
-    align-items   : center;
-    color: var(--primary-yellow);
-    width: 100%;
-}
+    50% {
+        transform : scale(1.1);
+    }
 
-body #container-title #content h1 img {
-    width  : 50px;
-    height : 50px;
-    margin : 0 15px;
+    100% {
+        transform : scale(1);
+    }
 }
 
 header nav {
-    width           : 50%;
     display         : flex;
-    justify-content : space-around;
-    align-content   : center;
+    flex-direction  : column;
+    justify-content : flex-start;
+    align-items     : center;
+    margin-top      : 2rem;
+    font-size       : 2rem;
 }
 
-header nav div {
-    background-color : mistyrose;
-    padding          : 1em;
-    border-radius    : 5px;
-    transition       : transform 400ms;
-}
-
-header nav div a {
+header nav a {
+    color           : var(--white);
     text-decoration : none;
-    color           : gray;
-    color           : black;
+    font-size       : 18px;
+    font-weight     : bold;
+    text-transform  : uppercase;
+    transition      : color 0.3s;
+    font-size       : 1.5rem;
 }
 
+header nav a:hover {
+    color : var(--primary-yellow);
+}
 
-header nav div:hover {
-    transform  : translateY(-10px);
-    transition : transform 400ms;
+main {
+    height           : 100vh;
+    width            : 100%;
+    background-color : var(--seconday);
+    padding          : 2rem;
+    box-sizing       : border-box;
+}
+
+.title {
+    font-size     : 2rem;
+    font-weight   : 700;
+    color         : var(--primary-red);
+    margin-bottom : 1rem;
 }
 
 
 #ingredient_pizza {
-    text-align : center;
-    border-collapse: collapse;
+    border-collapse : collapse;
+    min-width       : 20em;
 }
 
 #ingredient_pizza thead {
-background-color: mistyrose;
+    background-color : var(--primary-red);
+    color            : var(--white);
+    font-weight      : 500;
+    font-size        : 1.2rem;
+}
+
+#ingredient_pizza thead td {
+    padding    : 1rem;
+    text-align : center;
+    border     : 2px solid var(--primary-red);
+}
+
+#ingredient_pizza tbody td {
+    padding : 1rem;
+    border  : 1px solid var(--primary-red);
+}
+
+#ingredient_pizza {
+    border : 1px solid var(--primary-red);
+}
+
+#ingredient_pizza tbody td:nth-child(2) {
+    text-align : center;
+}
+
+a.link-details {
+    color           : var(--primary-red);
+    text-decoration : none;
+    font-weight     : 600;
+    transition      : color 0.3s;
+}
+
+a.link-details:hover::after {
+    content : "  <";
+    color   : var(--primary-red);
+}
+
+main ul {
     font-size: 1.2em;
-    font-weight : 600;
 }
-
-
-#ingredient_pizza td {
-    border: solid 2px black;
-    padding: 10px;
-}
-
