--- a/webpizza/applipizza/templates/applipizza/pizza.html
+++ b/webpizza/applipizza/templates/applipizza/pizza.html
@@ -1,30 +1,32 @@
 {% extends 'applipizza/base.html' %}
 
 {% block title %}
-détails d'une pizza
+    détails d'une pizza
 {% endblock %}
 
 
 {% block content %}
-<h2>Voici notre pizza</h2>
-<p>{{pizza.nomPizza|upper}} (Prix:{{pizza.prixPizza}}€)</p>
+    <h2 class="title">Voici notre pizza</h2>
+    <ul>
+        <li>{{ pizza.nomPizza|upper }} (Prix: {{ pizza.prixPizza }}€)</li>
+    </ul>
 
-<h2>Les {{ingredients|length}} Ingrédients de la Pizzas</h2>
-<table id="ingredient_pizza">
-    <thead>
-    <tr>
-        <td>Ingrédient</td>
-        <td>Quantité</td>
-    </tr>
-    </thead>
-    <tbody>
-    {% for i in ingredients %}
-    <tr>
-        <td>{{i.0.nomIngredient|upper}}</td>
-        <td>{{i.1}}</td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
+    <h2 class="title">Les {{ ingredients|length }} Ingrédients de la Pizzas</h2>
+    <table id="ingredient_pizza">
+        <thead>
+        <tr>
+            <td>Ingrédient</td>
+            <td>Quantité</td>
+        </tr>
+        </thead>
+        <tbody>
+        {% for i in ingredients %}
+            <tr>
+                <td>{{ i.0.nomIngredient|capfirst }}</td>
+                <td>{{ i.1 }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
 {% endblock %}
