--- a/webpizza/applipizza/templates/applipizza/base.html
+++ b/webpizza/applipizza/templates/applipizza/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/5e99020fac.js" crossorigin="anonymous"></script>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'applipizza/css/styles.css' %}">
     <link rel="icon" href="{% static 'applipizza/img/pizza.png' %}">
@@ -15,7 +16,7 @@
 <body>
 <header>
     <div id="logo">
-        <img src="{% static 'applipizza/img/pizza.png' %}">
+        <img src="{% static 'applipizza/img/pizza.png' %}" alt='logo_pizza'>
     </div>
     <nav>
         <div class="nav_section">
