--- a/webpizza/applipizza/templates/applipizza/formulaireModificationIngredient.html
+++ b/webpizza/applipizza/templates/applipizza/formulaireModificationIngredient.html
@@ -1,14 +1,15 @@
 {% extends 'applipizza/base.html' %}
 
 {% block title %}
-    Modification d'une Pizza
+    Modification d'un Ingredient
 {% endblock %}
 
 
 {% block content %}
-    <h2 class="title">Modification d'une Pizza</h2>
+    <h2 class="title">Modification d'un Ingredient</h2>
     <section class="form_container">
-        <form class="form update-pizza" action="/pizzas/{{ pizza.idPizza }}/updated/" method="post">
+    <h1>{{ ingredient.idIngredient }}</h1>
+        <form class="form update-ingredient" action="/ingredients/{{ ingredient.idIngredient }}/updated/" method="post">
             {% csrf_token %}
             {{ form.as_div }}
             <input type="submit" value="Envoyer">
