--- a/webpizza/applipizza/templates/applipizza/traitementFormulaireCreationIngredient.html
+++ b/webpizza/applipizza/templates/applipizza/traitementFormulaireCreationIngredient.html
@@ -8,4 +8,5 @@
 {% block content %}
     <h2 class="title" >Création d'un Ingredient</h2>
     <h3>L'ingrédient "{{ ingredient.nomIngredient }}" a bien été créé !</h3>
+    <a class="btn" href="/ingredients/">Les Ingredients</a>
 {% endblock %}
