--- a/webpizza/applipizza/templates/applipizza/traitementFormulaireCreationPizza.html
+++ b/webpizza/applipizza/templates/applipizza/traitementFormulaireCreationPizza.html
@@ -8,4 +8,5 @@
 {% block content %}
     <h2 class="title" >Création d'une Pizza</h2>
     <h3>La Pizza "{{ pizza.nomPizza }}" a bien été créé !</h3>
+    <a class="btn" href="/pizzas/">Les Pizzas</a>
 {% endblock %}
