--- a/webpizza/applipizza/templates/applipizza/traitementFormulaireModificationIngredient.html
+++ b/webpizza/applipizza/templates/applipizza/traitementFormulaireModificationIngredient.html
@@ -8,4 +8,5 @@
 {% block content %}
     <h2 class="title" >Modification d'une Pizza</h2>
     <h3>L'ingrédient "{{ ingredient.nomIngredient }}" a bien été modifiée !</h3>
+    <a class="btn" href="/ingredients/">Les Ingredients</a>
 {% endblock %}
