--- a/webpizza/applipizza/templates/applipizza/traitementFormulaireModificationPizza.html
+++ b/webpizza/applipizza/templates/applipizza/traitementFormulaireModificationPizza.html
@@ -8,4 +8,5 @@
 {% block content %}
     <h2 class="title" >Modification d'une Pizza</h2>
     <h3>La Pizza "{{ pizza.nomPizza }}" a bien été modifiée !</h3>
+    <a class="btn" href="/ingredients/">Les Pizzas</a>
 {% endblock %}
