--- a/webpizza/connexion/templates/connexion/password_reset_confirm.html
+++ b/webpizza/connexion/templates/connexion/password_reset_confirm.html
@@ -1,9 +1,5 @@
 {% extends 'connexion/base.html' %}
 
-{% block title %}
-    Réinitialisation du mot de passe
-{% endblock %}
-
 {% block content %}
     {% if validlink %}
         <h2>Réinitialisation du mot de passe</h2>
@@ -18,7 +14,7 @@
                     {% endif %}
                 </ul>
             {% endif %}
-            {% if form.new_password1.errors %}
+            {% if form.new_password2.errors %}
                 <ul class="alert alert-danger">
                     {% if error in form.new_password2.errors %}
                         <li>{{ error }}</li>
@@ -36,7 +32,7 @@
                     <td>
                         <label for="id_new_password2">Confirmer mot de pass :</label>
                     </td>
-
+                    <td>{{ form.new_password2 }}</td>
                 </tr>
             </table>
             <input type="submit" value="Changer mon mot de passe">
