fix(oeuvre) : fix page started

--- a/ArtSpectra/appliArtSpectra/templates/appliArtSpectra/base.html
+++ b/ArtSpectra/appliArtSpectra/templates/appliArtSpectra/base.html
@@ -8,46 +8,23 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'applipizza/css/styles.css' %}">
-    <link rel="icon" href="{% static 'applipizza/img/pizza.png' %}">
+    <link rel="stylesheet" href="{% static 'appliArtSpectra/css/styles.css' %}">
+{#    <link rel="icon" href="{% static 'applipizza/img/pizza.png' %}">#}
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Slackside+One&display=swap" />
+
 </head>
 
 <body>
 <header>
-    <div id="logo">
-        <img src="{% static 'applipizza/img/pizza.png' %}" alt='logo_pizza'>
-    </div>
     <nav>
-        <div class="nav_section">
-            <div class="nav_main">
-                <a href="/pizzas/" {% if request.path == '/pizzas/' %}class="active"{% endif %}>Les Pizzas</a>
-            </div>
-            <div class="nav_sub">
-                <a href="/pizzas/add/" {% if request.path == '/pizzas/add/' %}class="active"{% endif %}>Ajouter</a>
-            </div>
-        </div>
-
-        <div class="nav_section">
-            <div class="nav_main">
-                <a href="/ingredients/" {% if request.path == '/ingredients/' %}class="active"{% endif %}>Les
-                    Ingredients</a>
-            </div>
-            <div class="nav_sub">
-                <a href="/ingredients/add/" {% if request.path == '/ingredients/add/' %}class="active"{% endif %}>Ajouter</a>
-            </div>
-        </div>
-
-        {% if user.is_authenticated %}
-            <div id='logout'>
-                <span>bienvenue,{{ user }}</span>
-                <a href="{% url 'logout' %}">Déconnexion</a>
-            </div>
-        {% else %}
-            <div id='login'>
-                <a href="{% url 'login' %}">Connexion</a>
-            </div>
-        {% endif %}
-
+        <h1>ArtSpectra</h1>
+        <ul>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Artistes</a></li>
+            <li><a href="{% url 'oeuvres' %}">Oeuvres</a></li>
+            <li><a href="#">Expositions</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </nav>
 </header>
 <main>
@@ -55,6 +32,6 @@
 </main>
 </body>
 
-<script src="{% static 'applipizza/js/script.js' %}"></script>
+{#<script src="{% static 'applipizza/js/script.js' %}"></script>#}
 
 </html>
