--- a/ArtSpectra/appliArtSpectra/templates/appliArtSpectra/oeuvres.html
+++ b/ArtSpectra/appliArtSpectra/templates/appliArtSpectra/oeuvres.html
@@ -1,15 +1,13 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Les Oeuvres</title>
-    <link rel="stylesheet" href="{% static 'appliArtSpectra/css/styles.css' %}">
-</head>
-<body>
-{% for oeuvre in oeuvres %}
-    <p>{{ oeuvre.nomOeuvre }}</p>
-    <p>{{ oeuvre.dimensionOeuvre }}</p>
-{% endfor %}
-</body>
-</html>
+{% extends 'appliArtSpectra/base.html' %}
+
+{% block title %}
+    Les Oeuvres
+{% endblock %}
+
+{% block content %}
+    {% load static %}
+    {% for oeuvre in oeuvres %}
+        <p>{{ oeuvre.nomOeuvre }}</p>
+        <p>{{ oeuvre.dimensionOeuvre }}</p>
+    {% endfor %}
+{% endblock %}
