--- a/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
+++ b/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
@@ -1,54 +1,239 @@
 html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+    height  : 100%;
+    margin  : 0;
+    padding : 0;
+    width   : 100%;
 }
 
 header {
-    background-color: #ffffff;
-    color: #000000;
-    padding: 10px;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    font-family: 'Poppins', sans-serif;
+    background-color : #ffffff;
+    color            : #000000;
+    padding          : 10px;
+    text-align       : center;
+    font-size        : 20px;
+    font-weight      : bold;
+    font-family      : "Poppins", sans-serif;
+    display          : flex;
+    justify-content  : center;
+}
+
+header nav {
+    border-bottom : 1px solid lightgray;
+    width         : 80%;
+    padding       : 0 0 .5rem 0;
 }
 
 header nav h1 {
-    font-family: "Slackside One", sans-serif;
-    font-size: 3em;
-    margin: 0;
-    padding: 0;
+    font-family : "Slackside One", sans-serif;
+    font-size   : 3em;
+    margin      : 0 0 1rem 0;
+    padding     : 0;
+
 }
 
 header nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    list-style-type : none;
+    margin          : 0;
+    padding         : 0;
 }
 
 header nav ul li a {
-    color: #000000;
-    text-decoration: none;
+    color           : #000000;
+    text-decoration : none;
 }
 
 header nav ul li {
-    display: inline;
-    padding: 10px;
+    display : inline;
+    padding : 10px;
 }
 
 header nav ul li a:hover {
-    color: #000000;
-    text-decoration: underline;
+    color           : #000000;
+    text-decoration : underline;
 }
 
 header nav ul li a:active {
-    color: #000000;
-    text-decoration: underline;
+    color           : #000000;
+    text-decoration : underline;
 }
 
 header nav ul li a:visited {
-    color: #000000;
-    text-decoration: none;
+    color           : #000000;
+    text-decoration : none;
+}
+
+#container-oeuvre {
+    display               : grid;
+    grid-template-columns : 1fr 1fr 1fr 1fr;
+    grid-gap              : 20px;
+    align-items           : start;
+    margin                : 0;
+    padding               : 2rem;
+    width                 : 100%;
+    height                : 100%;
+    box-sizing            : border-box;
+}
+
+#container-oeuvre .card-oeuvre {
+    box-sizing       : border-box;
+    margin           : 0;
+    padding          : 0;
+    box-shadow       : 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width            : 100%;
+    height           : 20rem;
+    position         : relative;
+    background-color : black;
+    transition       : all 0.4s ease-in-out;
+}
+
+#container-oeuvre .card-oeuvre img.card-img {
+    width      : 100%;
+    height     : 100%;
+    box-sizing : border-box;
+    margin     : 0;
+    padding    : 0;
+    object-fit : cover;
+    transition : all 0.4s ease-in-out;
+
+}
+
+#container-oeuvre .card-oeuvre p.card-name {
+    position         : absolute;
+    bottom           : 0;
+    left             : 0;
+    width            : 100%;
+    height           : 3rem;
+    margin           : 0;
+    color            : white;
+    background-color : rgba(0, 0, 0, 0.7);
+    font-size        : 2rem;
+    font-weight      : bold;
+    font-family      : "Poppins", sans-serif;
+    display          : flex;
+    justify-content  : flex-start;
+    flex-direction   : column;
+    align-items      : flex-start;
+    padding          : 0 1rem;
+    box-sizing       : border-box;
+    transition       : all 0.4s ease-in-out;
+    overflow         : hidden;
+}
+
+#container-oeuvre .card-oeuvre p.card-name .--artiste,
+#container-oeuvre .card-oeuvre p.card-name .--type {
+    font-size  : 1rem;
+    margin     : 0;
+    padding    : 0;
+    visibility : hidden;
+    opacity    : 0;
+    transition : all 0.4s ease-in-out;
+}
+
+#container-oeuvre .card-oeuvre p.card-name .--type {
+    color : #ababab;
+}
+
+#container-oeuvre .card-oeuvre:hover {
+    box-shadow : 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+
+#container-oeuvre .card-oeuvre:hover p.card-name {
+    height : 6.5rem;
+}
+
+#container-oeuvre .card-oeuvre:hover p.card-name .--artiste,
+#container-oeuvre .card-oeuvre:hover p.card-name .--type {
+    visibility : visible;
+    opacity    : 1;
+    transition : all 0.4s ease-in-out;
+}
+
+
+#container-detail-oeuvre {
+    display               : grid;
+    grid-template-columns : 1fr 30rem;
+    align-items           : start;
+    gap: 2rem;
+    margin                : 0;
+    padding               : 2rem 10rem;
+    width                 : 100%;
+    height                : 100%;
+    box-sizing            : border-box;
+    font-family           : "Poppins", sans-serif;
+}
+
+#container-detail-oeuvre div.containerImgDetailOeuvre {
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+}
+
+#container-detail-oeuvre img.imgDetailOeuvre {
+    max-width  : 60%;
+    min-width: 35rem;
+    max-height : 70vh;
+    box-sizing : border-box;
+    margin     : 0;
+    padding    : 0;
+    object-fit : cover;
+}
+
+#container-detail-oeuvre div.containerInfoDetailOeuvre {
+    display         : flex;
+    flex-direction  : column;
+    justify-content : center;
+    align-items     : flex-start;
+    box-sizing      : border-box;
+    margin          : 0;
+    padding         : 0;
+}
+
+#container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--title h1 {
+    font-size   : 3rem;
+    font-weight : bold;
+    margin      : 0;
+    padding     : 0;
+    box-sizing  : border-box;
+}
+
+#container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--title p {
+    font-size   : 1.4rem;
+    font-weight : bold;
+    margin      : 0 0 1rem 0;
+    padding     : 0;
+    box-sizing  : border-box;
+}
+
+#container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content {
+    font-size : 1rem;
+    width: 100%;
+}
+
+#container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content #dimension,
+#container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content #dateCreation {
+    margin : 0;
+}
+
+#container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content a#addPanier {
+    display          : flex;
+    justify-content  : center;
+    align-items      : center;
+    width            : 100%;
+    height           : 3rem;
+    background-color : #000000;
+    color            : white;
+    text-decoration  : none;
+    font-size        : 1.2rem;
+    font-weight      : bold;
+    margin           : 1rem 0;
+    padding          : 0;
+    box-sizing       : border-box;
+    transition       : all 0.4s ease-in-out;
+}
+
+#container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content a#addPanier:hover {
+    background-color : #ababab;
+    color            : black;
+    transition       : all 0.4s ease-in-out;
 }
