--- a/ArtSpectra/appliArtSpectra/templates/appliArtSpectra/oeuvres.html
+++ b/ArtSpectra/appliArtSpectra/templates/appliArtSpectra/oeuvres.html
@@ -6,8 +6,19 @@
 
 {% block content %}
     {% load static %}
-    {% for oeuvre in oeuvres %}
-        <p>{{ oeuvre.nomOeuvre }}</p>
-        <p>{{ oeuvre.dimensionOeuvre }}</p>
-    {% endfor %}
+
+    <div id="container-oeuvre">
+        {% for oeuvre in oeuvres %}
+            <a href="/oeuvres/{{ oeuvre.slug }}/{{ oeuvre.idOeuvre }}/">
+                <div class="card-oeuvre">
+                    <img class="card-img" src="/media/{{ oeuvre.imageOeuvre }}" alt="{{ oeuvre.nomOeuvre }}"/>
+                    <p class="card-name">{{ oeuvre.nomOeuvre }}
+                        <span class="--artiste">artiste</span>
+                        <span class="--type">{{ oeuvre.slug|capfirst }} | {{ oeuvre.dimensionOeuvre }}</span>
+                    </p>
+                </div>
+            </a>
+        {% endfor %}
+    </div>
+
 {% endblock %}
