--- a/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
+++ b/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
@@ -62,6 +62,21 @@ header nav ul li a:visited {
     text-decoration : none;
 }
 
+header #container-connexion {
+    position : absolute;
+    top      : 0;
+    right    : 2rem;
+}
+header #container-connexion p {
+    margin: 0;
+}
+
+header #container-connexion a {
+    color           : #000000;
+    text-decoration : none;
+}
+
+
 #container-oeuvre {
     display               : grid;
     grid-template-columns : 1fr 1fr 1fr 1fr;
@@ -154,7 +169,7 @@ header nav ul li a:visited {
     display               : grid;
     grid-template-columns : 1fr 30rem;
     align-items           : start;
-    gap: 2rem;
+    gap                   : 2rem;
     margin                : 0;
     padding               : 2rem 10rem;
     width                 : 100%;
@@ -171,7 +186,7 @@ header nav ul li a:visited {
 
 #container-detail-oeuvre img.imgDetailOeuvre {
     max-width  : 60%;
-    min-width: 35rem;
+    min-width  : 35rem;
     max-height : 70vh;
     box-sizing : border-box;
     margin     : 0;
@@ -207,7 +222,7 @@ header nav ul li a:visited {
 
 #container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content {
     font-size : 1rem;
-    width: 100%;
+    width     : 100%;
 }
 
 #container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content #dimension,
