--- a/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
+++ b/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
@@ -5,6 +5,43 @@ html, body {
     width   : 100%;
 }
 
+#loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff; /* Couleur de fond */
+    z-index: 9999; /* Assurez-vous que le loader est visible au-dessus de tout le contenu */
+}
+
+/* Ajoutez une animation de chargement */
+@keyframes loaderAnimation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* Style du spinner */
+#loader::after {
+    content: "";
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 4px solid #ccc; /* Couleur de la bordure */
+    border-top-color: #333; /* Couleur de la bordure du dessus */
+    animation: loaderAnimation 0.6s linear infinite; /* Utilise l'animation définie précédemment */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -15px;
+    margin-left: -15px;
+}
+
+
 header {
     background-color : #ffffff;
     color            : #000000;
@@ -64,7 +101,7 @@ header nav ul li a:visited {
 
 header #container-connexion {
     position : absolute;
-    top      : 0;
+    top      : 1rem;
     right    : 2rem;
 }
 header #container-connexion p {
@@ -232,7 +269,7 @@ header #container-connexion a {
 
 #container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content a#addPanier {
     display          : flex;
-    justify-content  : center;
+    justify-content  : space-around;
     align-items      : center;
     width            : 100%;
     height           : 3rem;
