--- a/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
+++ b/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
@@ -1,44 +1,45 @@
 html, body {
-    height  : 100%;
-    margin  : 0;
-    padding : 0;
-    width   : 100%;
+    height      : 100%;
+    margin      : 0;
+    padding     : 0;
+    width       : 100%;
+    font-family : "Poppins", sans-serif;
 }
 
 #loader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff; /* Couleur de fond */
-    z-index: 9999; /* Assurez-vous que le loader est visible au-dessus de tout le contenu */
+    position         : fixed;
+    top              : 0;
+    left             : 0;
+    width            : 100%;
+    height           : 100%;
+    background-color : #fff; /* Couleur de fond */
+    z-index          : 9999; /* Assurez-vous que le loader est visible au-dessus de tout le contenu */
 }
 
 /* Ajoutez une animation de chargement */
 @keyframes loaderAnimation {
     0% {
-        transform: rotate(0deg);
+        transform : rotate(0deg);
     }
     100% {
-        transform: rotate(360deg);
+        transform : rotate(360deg);
     }
 }
 
 /* Style du spinner */
 #loader::after {
-    content: "";
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: 4px solid #ccc; /* Couleur de la bordure */
-    border-top-color: #333; /* Couleur de la bordure du dessus */
-    animation: loaderAnimation 0.6s linear infinite; /* Utilise l'animation définie précédemment */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -15px;
-    margin-left: -15px;
+    content          : "";
+    width            : 30px;
+    height           : 30px;
+    border-radius    : 50%;
+    border           : 4px solid #ccc; /* Couleur de la bordure */
+    border-top-color : #333; /* Couleur de la bordure du dessus */
+    animation        : loaderAnimation 0.6s linear infinite; /* Utilise l'animation définie précédemment */
+    position         : absolute;
+    top              : 50%;
+    left             : 50%;
+    margin-top       : -15px;
+    margin-left      : -15px;
 }
 
 
@@ -104,8 +105,9 @@ header #container-connexion {
     top      : 1rem;
     right    : 2rem;
 }
+
 header #container-connexion p {
-    margin: 0;
+    margin : 0;
 }
 
 header #container-connexion a {
@@ -267,6 +269,11 @@ header #container-connexion a {
     margin : 0;
 }
 
+#container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content #quantite {
+    margin : 2rem 0 0 0;
+}
+
+
 #container-detail-oeuvre div.containerInfoDetailOeuvre .detailOeuvre--content a#addPanier {
     display          : flex;
     justify-content  : space-around;
@@ -288,4 +295,72 @@ header #container-connexion a {
     background-color : #ababab;
     color            : black;
     transition       : all 0.4s ease-in-out;
+}
+
+#plus-artiste {
+    display         : flex;
+    flex-direction  : column;
+    justify-content : center;
+    align-items     : flex-start;
+    width           : 100%;
+    height          : 100%;
+    margin          : 5rem 0 0 0;
+    padding         : 0 2rem 10rem 2rem;
+    box-sizing      : border-box;
+}
+
+#plus-artiste a {
+    text-decoration : none;
+    color           : white;
+}
+
+#plus-artiste .container-oeuvre-plus {
+    display         : flex;
+    align-items     : center;
+    justify-content : flex-start;
+    margin          : 0;
+    padding         : 0;
+    width           : 100%;
+    height          : 100%;
+    box-sizing      : border-box;
+}
+
+#plus-artiste .container-oeuvre-plus .oeuvre-plus {
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    flex-direction  : column;
+    margin          : 0 2rem 0 0;
+    padding         : 0;
+    box-sizing      : border-box;
+    position        : relative;
+}
+
+#plus-artiste .container-oeuvre-plus .oeuvre-plus img.imgOeuvrePlus {
+    width      : 20em;
+    height     : 20em;
+    box-sizing : border-box;
+    margin     : 0;
+    padding    : 0;
+    object-fit : cover;
+    transition : all 0.4s ease-in-out;
+}
+#plus-artiste .container-oeuvre-plus .oeuvre-plus:hover img.imgOeuvrePlus {
+    opacity    : 0.8;
+    transition : all 0.4s ease-in-out;
+}
+
+#plus-artiste .plus-content {
+    display         : flex;
+    justify-content : space-around;
+    align-items     : center;
+    margin          : 0;
+    padding         : 0;
+    box-sizing      : border-box;
+    position        : absolute;
+    bottom          : 0;
+    width           : 100%;
+    height          : 3rem;
+    font-size       : 1.2rem;
+    background      : rgba(0, 0, 0, 0.8);
 }
