--- a/ArtSpectra/accounts/templates/accounts/signup-login.html
+++ b/ArtSpectra/accounts/templates/accounts/signup-login.html
@@ -7,48 +7,50 @@
 {% block content %}
 
     {% if request.get_full_path == '/signup/' %}
-        <h1>Inscrivez-vous</h1>
+        <div id="form_signup" class="formSL">
+            <h1>Inscrivez-vous</h1>
 
-
-    <form id="form_signup" method="post">
-        {% csrf_token %}
-        <table>
-            {% for field in form_signup %}
-                <tr>
-                    <td>{{ field.label_tag }}</td>
-                    <td>{{ field }}</td>
-                </tr>
-                {% for error in field.errors %}
-                    <tr>
-                        <td></td>
-                        <td class="alert alert-danger">{{ error }}</td>
-                    </tr>
-                {% endfor %}
-            {% endfor %}
-        </table>
-        <input type="submit" value="S'inscrire">
-    </form>
+            <form method="post">
+                {% csrf_token %}
+                <table>
+                    {% for field in form_signup %}
+                        <tr>
+                            <td>{{ field.label_tag }}</td>
+                            <td>{{ field }}</td>
+                        </tr>
+                        {% for error in field.errors %}
+                            <tr>
+                                <td></td>
+                                <td class="alert alert-danger">{{ error }}</td>
+                            </tr>
+                        {% endfor %}
+                    {% endfor %}
+                </table>
+                <input type="submit" value="S'inscrire">
+            </form>
+        </div>
     {% else %}
-        <h1>Connectez-vous</h1>
-
-    <form id="form_login" method="post">
-        {% csrf_token %}
-        <table>
-            {% for field in form_login %}
-                <tr>
-                    <td>{{ field.label_tag }}</td>
-                    <td>{{ field }}</td>
-                </tr>
-                {% for error in field.errors %}
-                    <tr>
-                        <td></td>
-                        <td class="alert alert-danger">{{ error }}</td>
-                    </tr>
-                {% endfor %}
-            {% endfor %}
-        </table>
-        <input type="submit" value="Se connecter">
-    </form>
+        <div id="form_login" class="formSL">
+            <h1>Connectez-vous</h1>
+            <form id="form_login" class="formSL" method="post">
+                {% csrf_token %}
+                <table>
+                    {% for field in form_login %}
+                        <tr>
+                            <td>{{ field.label_tag }}</td>
+                            <td>{{ field }}</td>
+                        </tr>
+                        {% for error in field.errors %}
+                            <tr>
+                                <td></td>
+                                <td class="alert alert-danger">{{ error }}</td>
+                            </tr>
+                        {% endfor %}
+                    {% endfor %}
+                </table>
+                <input type="submit" value="Se connecter">
+            </form>
+        </div>
     {% endif %}
 
     {% if error %}
