--- a/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
+++ b/ArtSpectra/appliArtSpectra/static/appliArtSpectra/css/styles.css
@@ -80,6 +80,10 @@ header nav ul li a {
     text-decoration : none;
 }
 
+header nav ul li a.--active {
+    text-decoration : underline;
+}
+
 header nav ul li {
     display : inline;
     padding : 10px;
@@ -113,6 +117,24 @@ header #container-connexion p {
 header #container-connexion a {
     color           : #000000;
     text-decoration : none;
+}
+
+header #container-connexion a:hover {
+    color           : #000000;
+    text-decoration : underline;
+}
+
+header #container-connexion .row-name {
+    display         : flex;
+    justify-content : space-around;
+    align-items     : center;
+}
+
+header #container-connexion .row-name img.user-avatar {
+    width         : 4rem;
+    height        : 4rem;
+    object-fit    : cover;
+    border-radius : 50%;
 }
 
 
@@ -345,6 +367,7 @@ header #container-connexion a {
     object-fit : cover;
     transition : all 0.4s ease-in-out;
 }
+
 #plus-artiste .container-oeuvre-plus .oeuvre-plus:hover img.imgOeuvrePlus {
     opacity    : 0.8;
     transition : all 0.4s ease-in-out;
@@ -363,4 +386,114 @@ header #container-connexion a {
     height          : 3rem;
     font-size       : 1.2rem;
     background      : rgba(0, 0, 0, 0.8);
+}
+
+
+div.formSL {
+    display         : flex;
+    flex-direction  : column;
+    justify-content : center;
+    align-items     : center;
+    margin          : 0;
+    padding         : 0;
+    box-sizing      : border-box;
+    width           : 100%;
+    height          : 100%;
+}
+
+div.formSL form {
+    display          : flex;
+    flex-direction   : column;
+    justify-content  : center;
+    align-items      : flex-end;
+    margin           : 0;
+    padding          : 2rem;
+    box-sizing       : border-box;
+    width            : fit-content;
+    height           : 100%;
+    background-color : black;
+    color            : white;
+}
+
+div.formSL form input[type="submit"] {
+    width            : 100%;
+    height           : 3rem;
+    color            : black;
+    background-color : white;
+    text-decoration  : none;
+    font-size        : 1.2rem;
+    font-weight      : bold;
+    margin           : 2rem 0 0 0;
+    padding          : 0;
+    box-sizing       : border-box;
+    border           : none;
+    transition       : all 0.4s ease-in-out;
+    cursor           : pointer;
+}
+
+div.formSL form input[type="submit"]:hover {
+    background-color : #ababab;
+    color            : black;
+    transition       : all 0.4s ease-in-out;
+}
+
+div.formSL form tr {
+    display         : flex;
+    justify-content : flex-end;
+    align-items     : center;
+    margin          : 0;
+    padding         : 0;
+    box-sizing      : border-box;
+    width           : 100%;
+    height          : 3rem;
+}
+
+div.formSL form tr.input-presentation,
+div.formSL form tr.input-avatar {
+    height : 12rem;
+}
+
+
+div.formSL form tr.input-avatar .imgAvatar {
+    width      : 10rem;
+    height     : 10rem;
+    box-sizing : border-box;
+    margin     : 0;
+    padding    : 0;
+    object-fit : cover;
+}
+
+
+div.formSL form tr td:first-child {
+    padding-right : 1rem;
+}
+
+div.formSL form input {
+    outline          : none;
+    width            : 100%;
+    height           : 2rem;
+    color            : black;
+    background-color : white;
+    text-decoration  : none;
+    font-size        : 1.2rem;
+    font-weight      : bold;
+    margin           : 0;
+    padding          : 0 0 0 .5rem;
+    box-sizing       : border-box;
+    border           : none;
+    transition       : all 0.4s ease-in-out;
+}
+
+#form_profil {
+    padding-bottom : 10rem;
+}
+
+#form_profil input[type="checkbox"] {
+    width  : 2rem;
+    height : 2rem;
+}
+
+#form_profil td input[type="checkbox"] {
+    vertical-align : middle;
+    margin         : 1.5rem 0;
 }
